# new-worker

./: Dockerfile.content-worker  Dockerfile.job-worker  Dockerfile.new_content_worker  Dockerfile.new_job_worker  entrypoint.py  pyproject.toml  railway.toml  requirements.txt  test_article.py  test_gateway.py
apps/article-worker/: worker.py
apps/article-worker/src/: activities.py  workflows.py
apps/company-worker/: worker.py
apps/company-worker/src/: __init__.py  activities.py  workflows.py
apps/content-worker/: activities.py  worker.py  workflows.py
apps/content-worker/src/: company_workflows.py
apps/job-worker/: activities.py  worker.py  workflows.py
apps/new_content_worker/: Dockerfile  activities.py  worker.py  workflows.py
apps/new_content_worker/src/: company_workflows.py
apps/new_job_worker/: worker.py
content-worker/: railway.toml
gateway/: Dockerfile  main.py
